# parallel-processing

./: .gitignore
homework/homework01/: README.md  run.sh  sources.txt
homework/homework01/src/: Main.java  MainFull.java
homework/homework01/src/parallel/: ParallelSolution1ForSequential1.java  ParallelSolution1ForSequential2.java  ParallelSolution2ForSequential1.java  ParallelSolution2ForSequential2.java
homework/homework01/src/sequential/: SequentialSolution1.java  SequentialSolution2.java  SequentialSolution3.java
homework/homework01/src/utils/: Config.java  (+4 more)
homework/homework02/src/: Solutie.java  Student.java  TestSolutieTema.java
homework/homework03/: CMakeLists.txt  Task.md  main.cpp
lab01/src/: BankAccount.java  BankCard.java  Main.java
lab02/src/: Main.java  ParallelSolution.java  ProcessingThread.java  Result.java  SequentialSolution.java
lab03/src/: Main.java  Prime.java  PrimeThread.java
lab04/src/bingo/: BingoGame.java  Main.java  Player.java
lab04/src/chatbot/: ChatBot.java  Main.java
lab04/src/market/: Consumer.java  Main.java  Market.java  Producer.java
lab05/src/market/: Consumer.java  Main.java  Market.java  Producer.java
lab05/src/rest/: Main.java  MessageInjector.java  MessageProcessor.java
lab06/: CMakeLists.txt  main.cpp
lab08/: CMakeLists.txt  main.cpp
lab08_cache_coherence/: CMakeLists.txt  main.cpp
lab08_false_cache_sharing/: CMakeLists.txt  main.cpp
lab09/: main.cpp
lab09.1/: CMakeLists.txt  main.cpp
lab09.2/: CMakeLists.txt  main.cpp
lab11.1/: CMakeLists.txt  main.cpp
lab11.2/: CMakeLists.txt  main.cpp
